objects/Account.object
<CustomObject>
    <fields>
        <fullName>Legal_Entity_Name__c</fullName>
        <inlineHelpText>This may not be the same as the Account Name or DBA Name.  It is very important to be accurate for Credit Corp pre-qualification.  The exact value can be found via the Secretary of State web site (for the state the dealer is located).</inlineHelpText>
        <label>Entity Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Phone__c</fullName>
        <label>Entity Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Postal__c</fullName>
        <label>Entity Postal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_State__c</fullName>
        <label>Entity State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Address__c</fullName>
        <formula>Business_License_Address__c &amp; BR() &amp;
    Business_License_City__c &amp; &quot;, &quot; &amp; Business_License_State__c &amp; &quot; &quot; &amp; 
    Business_License_Postal__c &amp; BR()</formula>
        <label>License Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_County__c</fullName>
        <label>Location County</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDA_Last_Updated_By__c</fullName>
        <description>A formula will populate this field based on who last changed the MDA field or the MDA link field.</description>
        <inlineHelpText>This is who last updated the MDA Link or MDA date.</inlineHelpText>
        <label>MDA Last Updated By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDA_Last_Updated__c</fullName>
        <description>A formula will populate this field based on who last changed the MDA field or the MDA link field.</description>
        <inlineHelpText>This is the last time the MDA Link or MDA date was last updated.</inlineHelpText>
        <label>MDA Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MDA_Link__c</fullName>
        <inlineHelpText>This links to the MDA document in Salesforce attached to this account.</inlineHelpText>
        <label>MDA Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MDA_NEW__c</fullName>
        <label>MDA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MDA__c</fullName>
        <label>MDA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mailing_County__c</fullName>
        <label>Mailing County</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daewoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUMMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Rover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincoln</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maserati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Map__c</fullName>
        <formula>hyperlink(&quot;http://maps.google.com/maps?f=q&amp;hl=en&amp;q=&quot; &amp;  BillingStreet &amp; &quot;+&quot; &amp;  BillingCity  &amp; &quot;+&quot; &amp;  BillingState  &amp;&quot;&amp;om=1&quot;, &quot;Link to Map&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Source_Codes__c</fullName>
        <label>Marketing Source Codes</label>
        <picklist>
            <picklistValues>
                <fullName>ROI QL1 Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROI QL2 Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROI QL3 Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usedcars.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealix.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print Ad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mercury_Termed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mercury Termed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Minority_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Update by clicking on &quot;Request Account Change&apos; button</inlineHelpText>
        <label>Minority Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NADA_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Also known as NADA Pricing</inlineHelpText>
        <label>ADP User Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Car_Program_Active_Date__c</fullName>
        <label>New Car Program Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Cars_Monthly__c</fullName>
        <label>New Cars Monthly</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Inventory__c</fullName>
        <label>New Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Units_Per_Year__c</fullName>
        <label>New Units Per Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nitra_Date__c</fullName>
        <label>Nitra Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Of_Locations__c</fullName>
        <description>Added for PFW Data Load - 08/2009</description>
        <label>No. Of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Employees__c</fullName>
        <label>No. of Employees</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_RO_s__c</fullName>
        <label>No. of RO&apos;s Monthly</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OEM_Advisory_Board_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OEM Advisory Board Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <label>OEM</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daewoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daihatsu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drawee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Rover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincoln</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maserati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitsubishi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nissan</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Operational_Efficiency__c</fullName>
        <label>Dealership Business Goals</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Oracle_Customer_Type__c</fullName>
        <label>Oracle Customer Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Key__c</fullName>
        <label>Org Key</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Used_Car_Class_Used_AutoTraders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Used Car Class Used - AutoTraders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Used_Car_Class_Used_Cars_com__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Used Car Class Used - Cars.com</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Used_Car_Class_Used_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Used Car Class Used - Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Out_of_Business_Date_CD__c</fullName>
        <description>Created Out of business date field so that CB customer data can see this info (RQ-03516) - CW</description>
        <formula>Out_of_Business_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of Business Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Out_of_Business_Date__c</fullName>
        <label>Out of Business Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Out_of_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Marketing_Product__c</fullName>
        <inlineHelpText>Shows a number if there is an active onstation WebId on the account.</inlineHelpText>
        <label>Owner Marketing Product</label>
        <summaryFilterItems>
            <field>Service_Contract__c.Line_Status__c</field>
            <operation>equals</operation>
            <value>ACTIVE</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Service_Contract__c.WebID__c</field>
            <operation>startsWith</operation>
            <value>onstation-</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Contract__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ownership_Change_Date__c</fullName>
        <label>Ownership Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ownership_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ownership Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parts_Notes__c</fullName>
        <label>Parts Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parts_Products_Ready_to_Showcase__c</fullName>
        <label>Parts Products Ready to Showcase</label>
        <picklist>
            <picklistValues>
                <fullName>Parts Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PartScan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Orders</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Parts_Products_to_be_Sold__c</fullName>
        <label>Parts Products to be Sold</label>
        <picklist>
            <picklistValues>
                <fullName>Parts Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PartScan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Orders</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Parts_User_Number__c</fullName>
        <label>Number Parts Users</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PartyID__c</fullName>
        <externalId>true</externalId>
        <label>PartyID</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Party_Create_Date__c</fullName>
        <label>Party Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Party_Creator__c</fullName>
        <label>Party Creator</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Number__c</fullName>
        <label>Party Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_Employee_Number__c</fullName>
        <label>Number Payroll Employees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Performance_Improvement_Consultant_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performance Improvement Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountskRyJ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Premier_Dealer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Update by clicking on &quot;Request Account Change&apos; button</inlineHelpText>
        <label>Premier Dealer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prior_to_OOB_Site_Type__c</fullName>
        <inlineHelpText>Site Type of Account prior to it being switched to Out-of-Business</inlineHelpText>
        <label>Prior to OOB Site Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publisher_Role__c</fullName>
        <label>Publisher Role</label>
        <picklist>
            <picklistValues>
                <fullName>Auto Publisher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edu Publisher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jobs Publisher</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region_Location_Identifier__c</fullName>
        <label>Region Location Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>Segment Accounts by Cobalt Region</inlineHelpText>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>ARG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoffman Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Truck Dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rooftop_Future_Address_Change_Date__c</fullName>
        <label>Rooftop Future Address Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rooftop_Future_Address_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rooftop Future Address Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLX_Account_CreateDate__c</fullName>
        <label>SLX Account CreateDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLX_Account_ID__c</fullName>
        <label>SLX Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Rank__c</fullName>
        <label>Sale Rank</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Center_Number__c</fullName>
        <label>Number Sales Centers</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Stage__c</fullName>
        <label>Sales Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committed to Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committed to Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted their SEM Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilitator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Status__c</fullName>
        <label>Sales Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Indicator__c</fullName>
        <formula>IMAGE(CASE( Satisfaction_Level__c,&quot;Very Satisfied&quot;, &quot;/img/samples/stars_500.gif&quot;, &quot;Satisfied&quot;, &quot;/img/samples/stars_300.gif&quot;, &quot;Not Very Satisfied&quot;, &quot;/img/samples/stars_100.gif&quot;,&quot;/img/samples/stars_100.gif&quot;),&quot;No Satisfaction Level&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Custom Formula Field based on satisfaction level</inlineHelpText>
        <label>Satisfaction Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Level__c</fullName>
        <inlineHelpText>Custom field to segment accounts by satisfaction level</inlineHelpText>
        <label>Satisfaction Level</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Very Satisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Saturn_Affiliate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this is a site that is an affiliate site to a Saturn Dealership.</description>
        <inlineHelpText>Site is an affiliate site to a Saturn Dealership.  Update by clicking on &quot;Request Account Change&apos; button and enter update request in notes field</inlineHelpText>
        <label>Saturn Affiliate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segment_Code__c</fullName>
        <inlineHelpText>NAAT (North American Auto &amp; Truck)</inlineHelpText>
        <label>Segment Code</label>
        <picklist>
            <picklistValues>
                <fullName>AUTG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Seller_Account_Name__c</fullName>
        <label>Seller Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_to_Collections_New__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to Collections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_Collections_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to Collections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Advisor_Number__c</fullName>
        <label>Number Service Advisors</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Notes__c</fullName>
        <label>Service Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Products_Ready_to_Showcase__c</fullName>
        <label>Service Products Ready to Showcase</label>
        <picklist>
            <picklistValues>
                <fullName>CSM Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Repair-Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair-Order Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Pricing Guides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super Service Advisor</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Service_Products_to_be_Sold__c</fullName>
        <label>Service Products to be Sold</label>
        <picklist>
            <picklistValues>
                <fullName>CSM Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Repair-Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair-Order Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Pricing Guides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super Service Advisor</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Service_Revenue__c</fullName>
        <label>Service Revenue</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Show_Critical_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Critical Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signer_1_2_Signer__c</fullName>
        <inlineHelpText>Contact Specific Signer - Must be Specific Named Signer
Any ADP Legal Signer - One of Legal&apos;s Title Based on Deal
Client Authorized Signer - Can be any Contact marked as Authorized Signer at Contact Level</inlineHelpText>
        <label>Signer 1 (2 Signer)</label>
        <picklist>
            <picklistValues>
                <fullName>General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Specific Signer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any ADP Legal Signer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Authorized Signer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signer_2_2_Signer__c</fullName>
        <inlineHelpText>Contact Specific Signer - Must be Specific Named Signer
Any ADP Legal Signer - One of Legal&apos;s Title Based on Deal
Client Authorized Signer - Can be any Contact marked as Authorized Signer at Contact Level</inlineHelpText>
        <label>Signer 2 (2 Signer)</label>
        <picklist>
            <picklistValues>
                <fullName>General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Specific Signer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any ADP Legal Signer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Authorized Signer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signer_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2 Signer Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Single_Point__c</fullName>
        <defaultValue>false</defaultValue>
        <description>* If a Corporation, Group, or District is set on the Account, the Single Point checkbox should be flipped to unchecked.
 * If a Corporation, Group or District is removed from the Account (so there is no Corporation, Group or District specified on teh account), then flip the field to be checked.</description>
        <label>Single Point</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Site_Type__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$User.Username</field>
                <operation>notContain</operation>
                <value>integration_user@adp.com</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Site_Type__c</referenceTo>
        <relationshipLabel>Accounts Related to this Site Type</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Social_Rep_Mgmt_Product__c</fullName>
        <description>This field counts the number of service contracts that contain &quot;Soc Med&quot;, &quot;SocMed&quot;, &quot;Social&quot;, &quot;Reputation&quot;, &quot;RepMgt&quot;, &quot;Rep Mgmt&quot; in the product description where status = Active.</description>
        <label>Social/Rep Mgmt Product</label>
        <summaryFilterItems>
            <field>Service_Contract__c.Description__c</field>
            <operation>contains</operation>
            <value>Soc Med, SocMed, Social, Reputation, RepMgt, Rep Mgmt</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Service_Contract__c.Status__c</field>
            <operation>equals</operation>
            <value>ACTIVE</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Contract__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Special_Addendum_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Special Addendum Required</description>
        <label>Special Addendum Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Association_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Association Member</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>